# stock-analysis

./: .detaignore  .gitignore  .pylintrc  404.html  app.py  deta_base_db.py  ema_indicator_detail50-200_500company_19-09-2020.csv  index.html  logger.py  main.py  mkdocs.yml  mongodb-interaction.ipynb  pyproject.toml  requirements.txt  setup.py  stock_analysis.py  stock_analysis_cli.py  stock_analysis_depcricated.py  web_app.py
.deta/: prog_info  state
.trunk/: trunk.yaml
data/: company.yaml  deta_nifty_index_list.json  deta_sample.json  ind_nifty200list.csv  ind_nifty500list.csv  nifty500_secter_list.json  nifty_index_data.csv  nifty_index_list.json  sample_company.csv  sample_company.json  sample_company.yaml
description/: index.html
docs/: conf.py  description.md  genindex.html  index.md  stock_analysis.html
results/: VolumeIndicator90DaysV2_detailed_22-06-2020.csv  VolumeIndicator90Days_detailed_25-08-2020.csv  ema_crossover_qa.csv  ema_indicator100-300_24company_31-08-2020.csv  ema_indicator50-200_500company_04-09-2020.csv  ema_indicator_detail50-200_500company_06-09-2020.csv  momentum_ema100-300_01-09-2020_top_5.csv  momentum_ema50-200_01-09-2020_top_20.csv  momentum_ema50-200_01-09-2020_top_5.csv  momentum_ema50-200_05-09-2020_top_40.csv  momentum_ema50-200_06-09-2020_top_40.csv  momentum_ema50-200_13-09-2020_top_20.csv  momentum_result_02-01-2020_top_40.csv  momentum_result_02-02-2020_top_40.csv  momentum_result_02-03-2020_top_40.csv  momentum_result_02-04-2020_top_40.csv  momentum_result_02-05-2020_top_40.csv  momentum_result_02-06-2020_top_40.csv  (+1 more)
(+60 files in other folders)
